fixing mobile horizontal scrolling

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -1,4 +1,7 @@
 /* General Styles */
+html, body{
+    overflow-x: hidden; /* Disable horizontal scroll */
+}
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 1.2rem;
